<resources>
    <string name="app_name">MyChatApp</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="emial">Emial</string>
    <string name="name">Name</string>
    <string name="account_setting">Account Setting</string>
    <string name="all_users">All Users</string>
    <string name="logout">Logout</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_status">Hi there, I am using MyChat App!</string>
    <string name="default_name">Display_Name</string>
    <string name="change_status">Change Status</string>
    <string name="change_image">Change Image</string>
    <string name="display_name">Display Name</string>
    <string name="default_user_status">Default User Status</string>
</resources>
