<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="-70dp"
    android:background="@color/colorPrimaryDark"
    tools:context=".SettingActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/setting_image"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/avatar_image" />

    <TextView
        android:id="@+id/setting_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="285dp"
        android:layout_marginBottom="10dp"
        android:text="@string/default_name"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/setting_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setting_name"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="286dp"
        android:text="@string/default_status"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/setting_changeImg"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="76dp"
        android:background="@android:color/white"
        android:text="@string/change_image"
        android:textColor="@color/design_default_color_primary" />

    <Button
        android:id="@+id/setting_changeStatus"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp"
        android:background="@color/colorAccent"
        android:text="@string/change_status"
        android:textColor="@android:color/white" />

</RelativeLayout>